--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
     padding-right: 17px;
     background: url(img/arrow\ down\ black.svg) right no-repeat;
   }
-  .header .header-bottom-content .header-nav .header-call-us {
+  .header .header-bottom-content .header-nav .header-call-us button {
     display: flex;
     align-items: center;
     gap: 10px;
