Main page + second page + mobile

--- a/style.css
+++ b/style.css
@@ -76,12 +76,13 @@ body {
 }
 
 .container {
-  padding: 15px;
+  padding: 0 15px;
   margin: auto;
-  max-width: 375px;
+  max-width: 480px;
 }
 
 .header .header-top-wrapper {
+  padding: 17px 0;
   background: #0C4B35;
 }
 .header .header-top-content {
@@ -100,6 +101,7 @@ body {
   background: url(img/arrow\ down.svg) right no-repeat;
 }
 .header .header-bottom-content {
+  padding: 15px 0;
   display: flex;
 }
 .header .header-bottom-content .logo {
@@ -118,12 +120,198 @@ body {
   align-items: center;
 }
 
+.flower-bg {
+  position: absolute;
+  bottom: -30px;
+  left: 0px;
+}
+
+.main-page {
+  background: linear-gradient(39.89deg, rgba(0, 115, 12, 0.81) -22.86%, rgba(251, 246, 238, 0) 116.18%);
+}
+.main-page .main-page-img {
+  margin: 0 -15px;
+  margin-top: -15px;
+  margin-bottom: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-page-content {
+  font-family: "Nunito";
+  font-style: normal;
+  position: relative;
+  /* div {
+    display: flex;
+    flex-direction: column;
+    gap: 19px;
+    justify-content: center;
+  } */
+}
+.main-page-content h1 {
+  padding-left: 29px;
+  background: url(img/green-little-plant.svg) left no-repeat;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+  margin-bottom: 10px;
+}
+.main-page-content h2 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 15px;
+}
+.main-page-content h2 span {
+  color: #00730C;
+}
+.main-page-content p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 40px;
+}
+.main-page-content div > button {
+  display: block;
+  background: #00730C;
+  border-radius: 5px;
+  padding: 12px 105px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: capitalize;
+  color: #FFFFFF;
+  margin-bottom: 19px;
+}
+.main-page-content .button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.main-page-content .button a {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #00730C;
+}
+.main-page-content .main-page-bottom-measures {
+  display: flex;
+  flex-direction: row;
+  gap: 11px;
+  justify-content: flex-end;
+}
+.main-page-content .main-page-bottom-measures div:last-child {
+  display: none;
+}
+.main-page-content .main-page-bottom-measures div {
+  display: flex;
+  flex-direction: row;
+  background: linear-gradient(180deg, #FFF8F1 0%, #CBE5CE 100%);
+  border-radius: 32px;
+  padding: 8px 10px;
+}
+.main-page-content .main-page-bottom-measures div span {
+  margin-right: 8px;
+}
+
+.main-page-bottom-measures {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.second-page {
+  margin-top: 50px;
+}
+
+.second-page-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.second-page-content h3 {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.second-page-content h3 span {
+  color: #00730C;
+}
+.second-page-content article {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.second-page-content .second-page-items {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.second-page-content .second-page-items > div {
+  width: 100%;
+  padding: 20px;
+  background: url(img/second-page-item-bg.svg) left no-repeat, linear-gradient(172.29deg, #FFFFFF -10.79%, #FFFFFF 94.04%);
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+  border-radius: 10px;
+  font-family: "Nunito";
+  font-style: normal;
+  display: flex;
+}
+.second-page-content .second-page-items > div div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.second-page-content .second-page-items > div div h4 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #212529;
+}
+.second-page-content .second-page-items > div div p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 610px;
   }
+  .second-page-content .second-page-items {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .second-page-content .second-page-items > div {
+    width: calc(50% - 20px);
+    flex-direction: column;
+    align-items: center;
+  }
+  .second-page-content .second-page-items > div div {
+    align-items: center;
+    text-align: center;
+  }
 }
 @media (min-width: 1024px) {
+  .flower-bg {
+    bottom: 0px;
+    left: -227px;
+  }
   .container {
     max-width: 990px;
   }
@@ -170,6 +358,97 @@ body {
   .header .header-bottom-content .mobile-burger {
     display: none;
   }
+  body {
+    overflow-x: hidden;
+  }
+  .main .main-page-img {
+    margin: 0;
+  }
+  .main .main-page-img img {
+    width: 130%;
+    position: relative;
+  }
+  .main-page-content {
+    display: flex;
+    flex-direction: row-reverse;
+    padding-top: 46px;
+    align-items: center;
+  }
+  .main-page-content .main-page-text {
+    padding-right: 100px;
+  }
+  .main-page-content h1 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .main-page-content p {
+    font-size: 16px;
+    line-height: 23px;
+    color: #676767;
+  }
+  .main-page-content h2 {
+    font-weight: 800;
+    font-size: 38px;
+    line-height: 39px;
+  }
+  .main-page-content .button {
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 30px;
+    align-items: center;
+  }
+  .main-page-content .button button {
+    margin-bottom: 0;
+    font-weight: 700;
+    font-size: 16px;
+    padding: 10px 30px;
+  }
+  .main-page-content .button a {
+    font-size: 18px;
+    line-height: 30px;
+    color: #676767;
+    padding-right: 35px;
+    background: url(img/arrow-gray-right.svg) right no-repeat;
+  }
+  .main-page-content .main-page-bottom-measures {
+    justify-content: flex-start;
+    padding-right: 135px;
+    gap: 0;
+  }
+  .main-page-content .main-page-bottom-measures div {
+    padding: 0;
+    background: none;
+    align-items: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .main-page-content .main-page-bottom-measures div span {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
+    border-radius: 35px;
+    font-size: 15px;
+  }
+  .main-page-content .main-page-bottom-measures div:last-child {
+    display: flex;
+  }
+  .main-page-content > div {
+    width: 50%;
+  }
+  .second-page-content .second-page-items > div {
+    width: calc(25% - 30px);
+    background-position: top;
+    padding: 60px 43px;
+    gap: 50px;
+  }
+  .second-page-content .second-page-items > div div {
+    gap: 10px;
+  }
 }
 @media (min-width: 1200px) {
   .container {
@@ -178,9 +457,67 @@ body {
   .header .header-bottom-content .header-nav {
     gap: 101px;
   }
+  .main-page-content .main-page-bottom-measures {
+    gap: 15px;
+  }
+  .main-page-content h2 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .main-page-content p {
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .main-page-content .button button, .main-page-content .button a {
+    font-size: 16px;
+    padding: 10px 30px;
+  }
 }
 @media (min-width: 1600px) {
   .container {
     max-width: 1408px;
+  }
+  .main-page-content h1 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .main-page-content p {
+    font-size: 18px;
+    line-height: 30px;
+    color: #676767;
+  }
+  .main-page-content h2 {
+    font-weight: 800;
+    font-size: 58px;
+    line-height: 79px;
+  }
+  .main-page-content .button button {
+    font-size: 18px;
+    line-height: 24px;
+    padding: 13px 35px;
+  }
+  .main-page-content .button a {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .second-page {
+    margin-top: 100px;
+  }
+  .second-page-content h3 {
+    font-size: 45px;
+    line-height: 61px;
+  }
+  .second-page-content article {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 0 125px;
+  }
+  .second-page-content .second-page-items > div div h4 {
+    font-size: 24px;
+    line-height: 33px;
+  }
+  .second-page-content .second-page-items > div div p {
+    font-size: 16px;
+    line-height: 28px;
   }
 }/*# sourceMappingURL=style.css.map */
