--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ body {
 }
 
 .main-page {
+  padding-bottom: 35px;
   background: linear-gradient(39.89deg, rgba(0, 115, 12, 0.81) -22.86%, rgba(251, 246, 238, 0) 116.18%);
 }
 .main-page .main-page-img {
@@ -360,6 +361,9 @@ body {
   }
   body {
     overflow-x: hidden;
+  }
+  .main-page {
+    padding-bottom: 0;
   }
   .main .main-page-img {
     margin: 0;
