--- a/style.scss
+++ b/style.scss
@@ -103,6 +103,7 @@ body {
   }
 
 .main-page {
+  padding-bottom: 35px;
   background: linear-gradient(39.89deg, rgba(0, 115, 12, 0.81) -22.86%, rgba(251, 246, 238, 0) 116.18%);
 
   .main-page-img {
@@ -364,6 +365,9 @@ div {
   }
 body {
   overflow-x: hidden;
+}
+.main-page{
+padding-bottom: 0;
 }
 .main {
   .main-page-img {
