--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
   flex-wrap: wrap;
   gap: 20px;
 }
-.second-page-content .second-page-items > div {
+.second-page-content .second-page-items > li {
   width: 100%;
   padding: 20px;
   background: url(img/second-page-item-bg.svg) left no-repeat, linear-gradient(172.29deg, #FFFFFF -10.79%, #FFFFFF 94.04%);
@@ -270,12 +270,12 @@ body {
   font-style: normal;
   display: flex;
 }
-.second-page-content .second-page-items > div div {
+.second-page-content .second-page-items > li div {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.second-page-content .second-page-items > div div h4 {
+.second-page-content .second-page-items > li div h4 {
   font-weight: 700;
   font-size: 16px;
   line-height: 22px;
@@ -283,11 +283,116 @@ body {
   text-transform: capitalize;
   color: #212529;
 }
-.second-page-content .second-page-items > div div p {
+.second-page-content .second-page-items > li div p {
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
   color: #676767;
+}
+
+.third-page-content {
+  position: relative;
+  margin-top: 100px;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.third-page-content > img {
+  position: absolute;
+  top: 50px;
+  left: -227px;
+}
+.third-page-content .icons-block div {
+  box-shadow: none;
+}
+
+.image-wrapper {
+  margin: auto;
+  position: relative;
+  padding-right: 42px;
+  padding-bottom: 92px;
+}
+.image-wrapper div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 188px;
+  height: 293px;
+  background: #00730C;
+  z-index: 0;
+}
+.image-wrapper .big-img img {
+  position: relative;
+  margin-top: 12px;
+  margin-left: 12px;
+  z-index: 1;
+}
+.image-wrapper .small-img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.text-wrapper {
+  font-family: "Nunito";
+  font-style: normal;
+}
+.text-wrapper h3 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 15px;
+}
+.text-wrapper h3 span {
+  color: #00730C;
+}
+.text-wrapper p {
+  color: #676767;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+}
+.text-wrapper > p:nth-child(2) {
+  margin-bottom: 30px;
+}
+.text-wrapper a {
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+  background: #00730C;
+  border-radius: 5px;
+  align-items: center;
+  padding: 10px 30px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height, or 125% */
+  text-transform: capitalize;
+  /* Typography/Font White Color */
+  color: #FFFFFF;
+}
+
+.icons-block {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.icons-block div {
+  flex-basis: calc(50% - 10px);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  padding: 15px;
+  background: #FFFFFF;
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+  border-radius: 5px;
 }
 
 @media (min-width: 640px) {
@@ -298,12 +403,12 @@ body {
     flex-direction: row;
     gap: 40px;
   }
-  .second-page-content .second-page-items > div {
+  .second-page-content .second-page-items > li {
     width: calc(50% - 20px);
     flex-direction: column;
     align-items: center;
   }
-  .second-page-content .second-page-items > div div {
+  .second-page-content .second-page-items > li div {
     align-items: center;
     text-align: center;
   }
@@ -359,10 +464,8 @@ body {
   .header .header-bottom-content .mobile-burger {
     display: none;
   }
-  body {
-    overflow-x: hidden;
-  }
   .main-page {
+    overflow: hidden;
     padding-bottom: 0;
   }
   .main .main-page-img {
@@ -444,14 +547,39 @@ body {
   .main-page-content > div {
     width: 50%;
   }
-  .second-page-content .second-page-items > div {
+  .second-page-content .second-page-items > li {
     width: calc(25% - 30px);
     background-position: top;
     padding: 60px 43px;
     gap: 50px;
   }
-  .second-page-content .second-page-items > div div {
+  .second-page-content .second-page-items > li div {
     gap: 10px;
+  }
+  .third-page-content {
+    flex-direction: row;
+  }
+  .text-wrapper h3 {
+    font-size: 38px;
+    line-height: 41px;
+    margin-bottom: 30px;
+  }
+  .text-wrapper p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .text-wrapper a {
+    margin: unset;
+    padding: 13px 35px;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .icons-block {
+    margin-top: 50px;
+  }
+  .icons-block div {
+    flex-direction: row;
+    gap: 30px;
   }
 }
 @media (min-width: 1200px) {
@@ -475,6 +603,19 @@ body {
   .main-page-content .button button, .main-page-content .button a {
     font-size: 16px;
     padding: 10px 30px;
+  }
+  .text-wrapper h3 {
+    font-size: 45px;
+  }
+  .text-wrapper p {
+    font-size: 16px;
+    line-height: 28px;
+  }
+  .text-wrapper a {
+    margin: unset;
+    padding: 13px 35px;
+    font-size: 18px;
+    line-height: 24px;
   }
 }
 @media (min-width: 1600px) {
