--- a/style.scss
+++ b/style.scss
@@ -241,7 +241,7 @@ flex-direction: column;
 flex-wrap: wrap;
 gap: 20px;
 
-> div {
+> li {
 
   width: 100%;
   padding: 20px;
@@ -274,7 +274,118 @@ color: #212529;
 }
 }
 
+.third-page {
+}
+.third-page-content {
+  position: relative;
+  margin-top: 100px;
+  padding-bottom: 50px;
+display: flex;
+flex-direction: column;
+gap: 30px;
+> img {
+  position: absolute;
+  top: 50px;
+  left: -227px;
+}
+.icons-block {
+  div {
+    box-shadow: none;
+  }
+}
 
+}
+.image-wrapper {
+  margin: auto;
+  position: relative;
+  padding-right: 42px;
+  padding-bottom: 92px;
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+width: 188px;
+height: 293px;
+background: #00730C;
+z-index: 0;
+  }
+  .big-img img{
+    position: relative;
+    margin-top: 12px;
+    margin-left: 12px;
+    z-index: 1;
+  }
+  .small-img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+  }
+
+}
+
+.text-wrapper {
+  font-family: 'Nunito';
+font-style: normal;
+  h3 {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    margin-bottom: 15px;
+    span {
+      color: #00730C;
+
+    }
+  }
+
+  p {color: #676767;
+    font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+  }
+  >p:nth-child(2) {
+    margin-bottom: 30px;
+  }
+  a {
+   display: block;
+   width: fit-content;
+    margin: auto;
+    background: #00730C;
+border-radius: 5px;
+align-items: center;
+padding: 10px 30px;font-weight: 700;
+font-size: 16px;
+line-height: 20px;
+/* identical to box height, or 125% */
+
+text-transform: capitalize;
+
+/* Typography/Font White Color */
+
+color: #FFFFFF;
+
+  }
+}
+
+.icons-block {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+gap: 20px;
+margin-bottom: 30px;
+  div {
+    flex-basis: calc(50% - 10px);
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+   padding: 15px;
+   background: #FFFFFF;
+box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+border-radius: 5px;
+  }
+
+}
 
 
 @media (min-width: 640px) {
@@ -288,7 +399,7 @@ color: #212529;
   flex-direction: row;
   gap: 40px;
  
-  > div {
+  > li {
     width: calc(50% - 20px);
     flex-direction: column;
 align-items: center;
@@ -363,10 +474,9 @@ div {
     }
 
   }
-body {
-  overflow-x: hidden;
-}
+
 .main-page{
+  overflow: hidden;
 padding-bottom: 0;
 }
 .main {
@@ -463,7 +573,7 @@ background: url(img/arrow-gray-right.svg) right no-repeat;
 
 .second-page-content{
 .second-page-items {
-  > div {
+  > li {
     width: calc(25% - 30px);
     background-position: top;
     padding: 60px 43px;
@@ -474,7 +584,37 @@ background: url(img/arrow-gray-right.svg) right no-repeat;
   }
 }
 }
+
+.third-page-content {
+  flex-direction: row;
 }
+.text-wrapper {
+  h3 {
+    font-size: 38px;
+line-height: 41px;
+margin-bottom: 30px;
+  }
+  p {
+    font-size: 14px;
+line-height: 24px;
+  }
+  a {
+    margin: unset;
+    padding: 13px 35px;
+    font-size: 18px;
+line-height: 24px;
+  }
+}
+.icons-block {
+  margin-top: 50px;
+div {
+  flex-direction: row;
+  gap: 30px;
+}
+}
+}
+
+
 @media (min-width: 1200px) {
   .container {
     max-width: 1170px;
@@ -506,6 +646,23 @@ padding: 10px 30px;
     }
   }
   }
+  .text-wrapper {
+    h3 {
+      font-size: 45px;
+
+    }
+    p {
+      font-size: 16px;
+  line-height: 28px;
+    }
+    a {
+      margin: unset;
+      padding: 13px 35px;
+      font-size: 18px;
+  line-height: 24px;
+    }
+  }
+
 }
 
 @media (min-width: 1600px) {
