--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,9 @@ body {
 }
 
 .header {
-
+  position: sticky;
+  top: 0px;
+  z-index: 11;
   .header-top-wrapper {
     padding: 17px 0;
     background: #0C4B35;
@@ -73,10 +75,15 @@ body {
   }
   }
   
-
+.header-bottom-wrapper {
+background: #fff;
+}
   .header-bottom-content {
     padding: 15px 0;
     display: flex;
+
+
+ 
     .logo {
       margin-right: auto;
       }
@@ -90,6 +97,7 @@ body {
     align-items: center;
    
     .burger-button {
+      background: none;
       display: flex;
       align-items: center;
     }
@@ -242,7 +250,7 @@ flex-wrap: wrap;
 gap: 20px;
 
 > li {
-
+gap: 20px;
   width: 100%;
   padding: 20px;
   background: url(img/second-page-item-bg.svg) left no-repeat, linear-gradient(172.29deg, #FFFFFF -10.79%, #FFFFFF 94.04%);
@@ -286,42 +294,13 @@ gap: 30px;
 > img {
   position: absolute;
   top: 50px;
-  left: -227px;
+  
+  left: -345px;
 }
 .icons-block {
   div {
     box-shadow: none;
   }
-}
-
-}
-.image-wrapper {
-  margin: auto;
-  position: relative;
-  padding-right: 42px;
-  padding-bottom: 92px;
-  div {
-    position: absolute;
-    top: 0;
-    left: 0;
-width: 188px;
-height: 293px;
-background: #00730C;
-z-index: 0;
-  }
-  .big-img img{
-    position: relative;
-    margin-top: 12px;
-    margin-left: 12px;
-    z-index: 1;
-  }
-  .small-img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-  }
-
 }
 
 .text-wrapper {
@@ -367,6 +346,37 @@ color: #FFFFFF;
   }
 }
 
+}
+.image-wrapper {
+  margin: auto;
+  position: relative;
+  padding-right: 42px;
+  padding-bottom: 92px;
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+width: 188px;
+height: 293px;
+background: #00730C;
+z-index: 0;
+  }
+  .big-img img{
+    position: relative;
+    margin-top: 12px;
+    margin-left: 12px;
+    z-index: 1;
+  }
+  .small-img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+  }
+
+}
+
+
 .icons-block {
   display: flex;
   flex-wrap: wrap;
@@ -386,7 +396,171 @@ border-radius: 5px;
   }
 
 }
+.why-choose-us {
+background: #0C4B35;
+overflow: hidden;
+height: 627px;
+}
+.why-choose-us-content {
+  position: relative;
+  padding: 50px 0;
+  .text-wrapper {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Nunito';
+  font-style: normal;
+    color: #fff;
+  h3 {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    margin-bottom: 15px;
+  }
+  p {
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 40px;
+  }
+  a {
+    display: block;
+    color: #fff;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+  padding: 10px 30px;
+  background: #00730C;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  }
+  }
 
+}
+.bg-flower-left {
+  position: absolute;
+  top: 50px;
+  left: -220px;
+  z-index: 0;
+}
+.bg-flower-right {
+  position: absolute;
+  top: -100px;
+  right: -150px;
+  z-index: 0;
+}
+.img-wrapper {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.icons-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 29px;
+  margin-bottom: 30px;
+  li {
+    flex-basis: calc(50% - 14.5px);
+  
+    font-weight: 700;
+font-size: 16px;
+line-height: 22px;
+margin-bottom: -9px;
+display: flex;
+align-items: center;
+justify-content: center;
+span {
+ padding-left: 30px;
+ background: url(img/why-choose-us-check-icon.svg) -8px -6px no-repeat;
+}
+  }
+}
+.mobile-burger-wrapper {
+
+  position: fixed;
+  z-index: 10;
+  background: #0C4B35;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 125px;
+}
+.mobile-burger-content {
+height: 100%;
+  font-family: 'Nunito';
+  font-style: normal;
+  padding: 25px 15px 20px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+ > nav {
+  >  ul {
+    nav.active {
+      height: fit-content;
+    }
+    nav {
+      overflow: hidden;
+      height: 0px;
+      ul {
+        li{
+          a {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 22px;
+            color: #FFFFFF;
+            opacity: 0.7;
+          }
+        }
+      }
+    }
+   >   li {
+   
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+
+opacity: 0.7;
+
+        padding-top: 15px;
+        padding-bottom: 8px;
+        border-top: 1px solid gray;
+        span {
+        padding-right: 20px;
+        background: url(img/arrow\ down\ gray\ burger.svg) right no-repeat;
+        }
+        a {
+    color: #FFFFFF;
+opacity: 0.7; 
+}
+      }
+    }
+  }
+}
+
+.burger-footer {
+  .icons {
+    margin-bottom: 23px;
+        display: flex;
+        justify-content: center;
+    gap: 20px;
+  }
+p {
+padding: 0 53px;
+margin: auto;
+font-size: 10px;
+line-height: 14px;
+text-align: center;
+color: #FFFFFF;
+}
+}
 
 @media (min-width: 640px) {
   .container {
@@ -476,6 +650,7 @@ div {
   }
 
 .main-page{
+  height: 640px;
   overflow: hidden;
 padding-bottom: 0;
 }
@@ -587,24 +762,25 @@ background: url(img/arrow-gray-right.svg) right no-repeat;
 
 .third-page-content {
   flex-direction: row;
+  .text-wrapper {
+    h3 {
+      font-size: 38px;
+  line-height: 41px;
+  margin-bottom: 30px;
+    }
+    p {
+      font-size: 14px;
+  line-height: 24px;
+    }
+    a {
+      margin: unset;
+      padding: 13px 35px;
+      font-size: 18px;
+  line-height: 24px;
+    }
+  }
 }
-.text-wrapper {
-  h3 {
-    font-size: 38px;
-line-height: 41px;
-margin-bottom: 30px;
-  }
-  p {
-    font-size: 14px;
-line-height: 24px;
-  }
-  a {
-    margin: unset;
-    padding: 13px 35px;
-    font-size: 18px;
-line-height: 24px;
-  }
-}
+
 .icons-block {
   margin-top: 50px;
 div {
@@ -612,6 +788,37 @@ div {
   gap: 30px;
 }
 }
+.why-choose-us-content {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  .img-wrapper {
+    img {
+      width: 542px;
+      height: 350px;
+    }
+  }
+.bg-flower-left {
+ top: 100px;
+ left: -620px;
+}  
+.bg-flower-right {
+  top: -180px;
+  right: -680px;
+}
+.text-wrapper {
+  align-items: flex-start;
+}
+.icons-wrapper {
+  li {
+    justify-content: flex-start;
+  }
+}
+}
+
+
+
+
 }
 
 
@@ -646,10 +853,13 @@ padding: 10px 30px;
     }
   }
   }
+  .why-choose-us-content {
+
+  
   .text-wrapper {
     h3 {
       font-size: 45px;
-
+line-height: 51px;
     }
     p {
       font-size: 16px;
@@ -662,7 +872,7 @@ padding: 10px 30px;
   line-height: 24px;
     }
   }
-
+}
 }
 
 @media (min-width: 1600px) {
@@ -731,5 +941,43 @@ padding: 0 125px;
     }
   }
 
+}
+
+
+.why-choose-us-content {
+  .text-wrapper {
+    font-family: 'Nunito';
+font-style: normal;
+    h3 {
+      font-weight: 700;
+      font-size: 45px;
+      line-height: 61px;
+    }
+    p {
+      font-weight: 400;
+font-size: 18px;
+line-height: 30px;
+color: #FFFFFF;
+    }
+    a {
+      padding: 13px 35px;
+
+    }
+    .icons-wrapper {
+      li {
+font-size: 24px;
+line-height: 33px;
+      }
+    }
+  }
+}
+
+.why-choose-us-content {
+  .img-wrapper {
+    img {
+      width: unset;
+      height: unset;
+    }
+  }
 }
 }
