--- a/style.css
+++ b/style.css
@@ -495,7 +495,15 @@ body {
   background: url(img/why-choose-us-check-icon.svg) -8px -6px no-repeat;
 }
 
+.mobile-burger-wrapper.active {
+  opacity: 1;
+  visibility: visible;
+}
+
 .mobile-burger-wrapper {
+  opacity: 0;
+  visibility: hidden;
+  transition: all ease 0.5s;
   position: fixed;
   z-index: 10;
   background: #0C4B35;
@@ -514,14 +522,10 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-.mobile-burger-content > nav > ul nav.active {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
 .mobile-burger-content > nav > ul nav {
   overflow: hidden;
-  height: 0px;
+  max-height: 0;
+  transition: max-height ease-in-out 0.3s;
 }
 .mobile-burger-content > nav > ul nav ul li a {
   font-weight: 400;
