staff section with slider

--- a/style.css
+++ b/style.css
@@ -416,7 +416,6 @@ main {
 .why-choose-us {
   background: #0C4B35;
   overflow: hidden;
-  height: 627px;
 }
 
 .why-choose-us-content {
@@ -578,7 +577,7 @@ main {
 }
 
 .working-process-content {
-  padding-top: 50px;
+  padding: 50px 0px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -683,6 +682,124 @@ main {
   background: url(img/working-process-tel-icon-green.svg) left no-repeat;
 }
 
+.staff-content {
+  font-family: "Nunito";
+  font-style: normal;
+  text-align: center;
+  padding-bottom: 50px;
+}
+.staff-content h2 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 15px;
+}
+.staff-content h2 span {
+  color: #00730C;
+}
+.staff-content > .text-wrapper {
+  margin-bottom: 40px;
+}
+.staff-content > .text-wrapper p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 30px;
+}
+.staff-content > .text-wrapper button {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+  background: #00730C;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+.staff-content .slider-wrapper .slider-line .slide {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.staff-content .slider-wrapper .slider-line .slide img {
+  width: 100%;
+  border-radius: 10px;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate {
+  background: linear-gradient(6.68deg, #00730C 4.95%, rgba(251, 246, 238, 0) 264.79%);
+  border-radius: 10px;
+  position: absolute;
+  padding-top: 3%;
+  top: 81%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+  transition: all ease 0.4s;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate h4 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 33px;
+  text-transform: capitalize;
+  color: #FFFFFF;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate h4 span {
+  font-size: 18px;
+  line-height: 30px;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate .worker-social-links {
+  display: flex;
+  /*  .google {
+   }
+   .facebook {
+   }
+   .twitter {
+   }
+   .pinterest {
+   }
+   .linkedin {
+   } */
+}
+.staff-content .slider-wrapper .slider-line .slide .translate .worker-social-links .item {
+  width: 30px;
+  height: 30px;
+  background: url(img/linkedin-icon.svg) center no-repeat;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate .worker-social-links .item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.staff-content .slider-wrapper .slider-line .slide .translate.open {
+  top: 0px;
+  padding-top: 50%;
+}
+.staff-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+  position: relative;
+  bottom: 0px;
+  margin-top: 30px;
+}
+.staff-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal .swiper-pagination-bullet {
+  width: 20px;
+  height: 6px;
+  background: #00730C;
+  border-radius: 8px;
+}
+.staff-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  width: 50px;
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 610px;
@@ -743,11 +860,11 @@ main {
   .header .header-bottom-content .header-nav .header-call-us button {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     background: #00730C;
-    padding: 10px 34.5px;
+    padding: 7px 24.5px;
     color: white;
-    font-size: 18px;
+    font-size: 17px;
   }
   .header .header-bottom-content .mobile-burger {
     display: none;
@@ -874,6 +991,9 @@ main {
     flex-direction: row-reverse;
     align-items: center;
   }
+  .why-choose-us-content .img-wrapper {
+    margin-bottom: 0;
+  }
   .why-choose-us-content .img-wrapper img {
     width: 542px;
     height: 350px;
@@ -923,6 +1043,40 @@ main {
          text-align-last: left;
     margin-bottom: 0;
   }
+  .slider-wrapper .slider-line {
+    display: flex;
+    gap: 30px;
+  }
+  .staff-content {
+    padding-bottom: 100px;
+  }
+  .staff-content h2 {
+    text-align: left;
+  }
+  .staff-content > .text-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 100px;
+    text-align: left;
+  }
+  .staff-content > .text-wrapper p {
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 0;
+  }
+  .staff-content > .text-wrapper button {
+    flex-shrink: 0;
+    margin: 0;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 {
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 span {
+    font-size: 15px;
+    line-height: 15px;
+  }
 }
 @media (min-width: 1200px) {
   .container {
@@ -930,6 +1084,11 @@ main {
   }
   .header .header-bottom-content .header-nav {
     gap: 101px;
+  }
+  .header .header-bottom-content .header-nav .header-call-us button {
+    gap: 10px;
+    padding: 10px 34.5px;
+    font-size: 18px;
   }
   .main-page-content .main-page-bottom-measures {
     gap: 15px;
@@ -960,10 +1119,50 @@ main {
     font-size: 18px;
     line-height: 24px;
   }
+  .working-process-content h2 {
+    font-size: 45px;
+  }
+  .working-process-content p {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .working-process-content .items-wrapper .item h3 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .working-process-content .items-wrapper .item p {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .working-process-content .items-wrapper .item .top-content div {
+    font-size: 78px;
+  }
+  .working-process-content footer p {
+    font-size: 33px;
+    line-height: 45px;
+  }
+  .working-process-content footer button {
+    padding: 10px 35px;
+  }
+  .working-process-content footer button span {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .staff-content > .text-wrapper {
+    gap: 200px;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 {
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 span {
+    font-size: 16px;
+    line-height: 17px;
+  }
 }
 @media (min-width: 1600px) {
   .container {
-    max-width: 1408px;
+    max-width: 1440px;
   }
   .main-page-content h1 {
     font-size: 16px;
@@ -1033,5 +1232,20 @@ main {
   .why-choose-us-content .img-wrapper img {
     width: unset;
     height: unset;
+  }
+  .staff-content > .text-wrapper {
+    gap: 260px;
+  }
+  .staff-content > .text-wrapper button {
+    padding: 13px 35px;
+    font-size: 18px;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 {
+    font-size: 24px;
+    line-height: 33px;
+  }
+  .staff-content .slider-wrapper .slider-line .slide .translate h4 span {
+    font-size: 18px;
+    line-height: 30px;
   }
 }/*# sourceMappingURL=style.css.map */
