--- a/style.css
+++ b/style.css
@@ -1028,6 +1028,180 @@ main {
   transition: all ease 0.5s;
 }
 
+.artickles {
+  margin-top: 50px;
+}
+
+.artickles-content {
+  position: relative;
+  padding-bottom: 30px;
+  font-family: "Nunito";
+  font-style: normal;
+}
+.artickles-content h2 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 20px;
+}
+.artickles-content h2 span {
+  color: #00730C;
+}
+.artickles-content p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  color: #676767;
+  margin-bottom: 40px;
+}
+.artickles-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+  position: relative;
+  bottom: 0px;
+  margin-top: 30px;
+}
+.artickles-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal .swiper-pagination-bullet {
+  width: 20px;
+  height: 6px;
+  background: #00730C;
+  border-radius: 8px;
+}
+.artickles-content .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  width: 50px;
+}
+
+.artickles-slider {
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+}
+
+.artickles-slide.background-image {
+  background: url(img/artickles-slider-bg-img.png) no-repeat;
+  background-size: cover;
+}
+
+.artickles-slide.background-image > p,
+.artickles-slide.background-image > h4,
+.artickles-slide.background-image > .slide-footer,
+.artickles-slide.background-image > .slide-footer > .creator {
+  color: white;
+}
+
+.artickles-slide {
+  padding: 30px 20px;
+  font-family: "Nunito";
+  font-style: normal;
+  background: url(img/artickles-slide-bg.png) no-repeat top right;
+}
+.artickles-slide h3 {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  color: #00730C;
+  background: #D9F1E0;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.15);
+  padding: 0 26px;
+  margin-bottom: 40px;
+}
+.artickles-slide h4 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  color: #00730C;
+  padding-right: 70px;
+  margin-bottom: 15px;
+}
+.artickles-slide p {
+  text-align: left;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+}
+.artickles-slide .slide-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 0;
+  border-top: 1px solid #E3E3E3;
+  color: #676767;
+  font-family: "Nunito";
+  font-style: normal;
+}
+.artickles-slide .slide-footer .date {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+}
+.artickles-slide .slide-footer .creator {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #676767;
+  padding-left: 30px;
+  background: url(img/admin-icon.svg) left no-repeat;
+}
+
+.photos-line {
+  margin-top: 50px;
+}
+
+.photos-line-content {
+  padding-bottom: 100px;
+}
+
+.photos-line-slider {
+  margin-bottom: -40px;
+}
+
+.photos-line-wrapper .swiper-slide img {
+  display: block;
+  margin: auto;
+}
+
+.photos-line-text {
+  background: #D9F1E0;
+  border-radius: 5px;
+  position: relative;
+  top: 90px;
+  padding: 30px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.photos-line-text p {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  color: #212529;
+}
+.photos-line-text p span {
+  color: #00730C;
+}
+.photos-line-text button {
+  background: #00730C;
+  border-radius: 5px;
+  padding: 10px 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: capitalize;
+  color: #FFFFFF;
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 610px;
@@ -1370,6 +1544,25 @@ main {
     text-align: left;
     padding-right: 0px;
   }
+  .artickles-content .artickles-slide {
+    box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+  }
+  .artickles-content h2 {
+    font-size: 35px;
+  }
+  .artickles-content p {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .photos-line-text {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+  }
+  .photos-line-text p {
+    font-size: 30px;
+  }
 }
 @media (min-width: 1200px) {
   .container {
@@ -1587,5 +1780,34 @@ main {
   .faq-content .accordeon-wrapper .clicked .open-close::before, .faq-content .accordeon-wrapper .clicked .open-close::after {
     width: 3px;
     height: 15px;
+  }
+  .artickles-content .artickles-slide {
+    padding: 100px 30px 20px 30px;
+  }
+  .artickles-content .artickles-slide h3 {
+    margin-bottom: 75px;
+    padding: 3px 20px;
+  }
+  .artickles-content .artickles-slide h4 {
+    margin-bottom: 30px;
+    font-size: 24px;
+    line-height: 33px;
+    padding-right: 0;
+  }
+  .artickles-content .artickles-slide .slide-footer {
+    margin: 0 -30px;
+    padding: 10px 30px;
+  }
+  .artickles-content h2 {
+    font-size: 45px;
+  }
+  .artickles-content > p {
+    padding: 0px 140px;
+  }
+  .photos-line-text {
+    padding: 30px 100px;
+  }
+  .photos-line-text p {
+    font-size: 45px;
   }
 }/*# sourceMappingURL=style.css.map */
